Add an order and a name to editable plots